z-index issue in popup fixed

--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -1161,6 +1161,9 @@ input[type="submit"],input[type="button"]{
                         margin-top: 5px;
                         font-size: 12px;
                     }
+                    .read_text{
+                        padding-top: 10px;
+                    }
                 }
                 .check-wrap{
                     padding-top: 10px;
@@ -1683,6 +1686,17 @@ input[type="submit"],input[type="button"]{
     overflow: auto;
     padding-bottom: 15px;
     max-height:700px;
+    .module_view_table{
+        tr{
+            th,td{
+                &:first-child{
+                    text-align: center;
+                    width: 200px;
+                }
+                
+            }
+        }
+    }
 }
 .hide{
     display: none;
@@ -1816,4 +1830,7 @@ table{
             }
         }
     }
+}
+.ui-widget.ui-widget-content{
+    z-index: 9999;
 }
